--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -16,6 +16,8 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
+            <div th:insert="~{fragments/common :: header}"></div>
+            <div th:insert="~{fragments/user :: userpanel}"></div>
             <article class="card-body mx-auto" style="max-width: 400px;">
                 <div>
                     <h3 class="text-center" th:text="#{'message.request-page.header.'+${header}}"></h3>
@@ -102,6 +104,7 @@
     </div>
 </div>
 
+<div th:insert="~{fragments/common :: footer}"></div>
 
 </body>
 </html>
