--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -17,7 +17,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div th:insert="~{fragments/common :: header}"></div>
-            <div th:insert="~{fragments/user :: userpanel}"></div>
+            <div th:insert="~{fragments/user :: userpanel-links}"></div>
             <article class="card-body mx-auto" style="max-width: 400px;">
                 <div>
                     <h3 class="text-center" th:text="#{'message.request-page.header.'+${header}}"></h3>
@@ -79,32 +79,16 @@
                     </div>
                     <input hidden class="form-control" type="text" th:field="*{id}"/>
                     <input hidden class="form-control" type="text" th:field="*{deniedRequest}"/>
-                    <div class="form-group">
+                    <div id="request-action-button" class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"
                                 th:text="#{'message.'+${buttonName}}"></button>
                     </div>
                 </form>
 
-
-
-                <div class="center-align">
-                    <a onclick="back()" class="btn btn-dark" th:text="#{message.back}">Back</a>
-                </div>
             </article>
-            <div class="text-center">
-                <span th:text="#{message.change-language}+': '"></span>
-                <a th:href="@{'/language?lang=en'}">
-                    <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
-                </a> <span> /</span>
-                <a th:href="@{'/language?lang=ru'}">
-                    <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
-                </a>
-            </div>
         </div>
+        <div th:insert="~{fragments/common :: footer}"></div>
     </div>
 </div>
-
-<div th:insert="~{fragments/common :: footer}"></div>
-
 </body>
 </html>
