--- a/src/main/resources/templates/fragments/user.html
+++ b/src/main/resources/templates/fragments/user.html
@@ -4,11 +4,11 @@
 <body>
 
 
-<div th:fragment="userpanel">
+<div th:fragment="userpanel-index">
 
     <div class="user-menu">
         <a id="menu-rending" onclick="userMenuNavigation(this.id)"
-           class="btn menu-btn center-align">
+           class="btn menu-btn btn-info center-align">
             <span th:text="#{message.index-page.your-requests}">Pending</span>
             <span th:unless="${unprocessedCount==0}"
                   th:text="'('+${unprocessedCount}+')'">1</span>
@@ -20,6 +20,36 @@
                     </span>
         </a>
         <a id="menu-denied" onclick="userMenuNavigation(this.id)"
+           class="btn menu-btn btn-info center-align">
+            <span th:text="#{message.admin-page.denied}">Denied</span>
+            <span th:unless="${deniedCount==0}"
+                  th:text="'('+${deniedCount}+')'">1</span>
+        </a>
+        <a id="menu-rooms" th:href="@{/rooms}"
+           class="btn menu-btn btn-info center-align"
+           th:text="#{message.hotel.rooms}">Rooms</a>
+        <a id="menu-newrequest" th:href="@{/request/new}"
+           class="btn menu-btn btn-info center-align"
+           th:text="#{message.hotel.new-request}">New request</a>
+    </div>
+</div>
+
+<div th:fragment="userpanel-links">
+
+    <div class="user-menu">
+        <a id="menu-rending" onclick="userMenuNavigation(this.id)" th:href="@{/index}"
+           class="btn menu-btn btn-info center-align">
+            <span th:text="#{message.index-page.your-requests}">Pending</span>
+            <span th:unless="${unprocessedCount==0}"
+                  th:text="'('+${unprocessedCount}+')'">1</span>
+        </a>
+        <a id="menu-approved" onclick="userMenuNavigation(this.id)" th:href="@{/index(pr_page=1)}"
+           class="btn menu-btn btn-info center-align"> <span th:text="#{message.index-page.processed-requests}">Processed</span>
+            <span th:unless="${processedCount==0}"
+                  th:text="'('+${processedCount}+')'">1
+                    </span>
+        </a>
+        <a id="menu-denied" onclick="userMenuNavigation(this.id)" th:href="@{/index(dr_page=1)}"
            class="btn menu-btn btn-info center-align">
             <span th:text="#{message.admin-page.denied}">Denied</span>
             <span th:unless="${deniedCount==0}"
