--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,9 +41,7 @@
                         <input type="submit" th:value="#{message.login-page.button}" class="btn login_btn">
                     </div>
                 </form>
-            </div>
-            <div class="card-footer">
-                <div class="d-flex justify-content-center links">
+                <div id="register-haveacc" class="d-flex justify-content-center links">
                     <span th:text="#{message.login-page.signup.text}+' '"></span><a
                         th:text="' '+#{message.login-page.signup.link}" id="signup" href="/register">Sign Up</a>
                 </div>
