--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -84,7 +84,7 @@
                                 th:text="#{message.register-page.create-button}"> Create account
                         </button>
                     </div>
-                    <div class="d-flex justify-content-center ">
+                    <div id="register-haveacc" class="d-flex justify-content-center ">
                         <p th:text="#{message.register-page.have-account}">Have an account?</p>
                         <a class="login-link" href="/login" th:text="#{message.register-page.login-link}">Log In</a>
                     </div>
