--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -86,8 +86,8 @@
                 </form>
 
             </article>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
-        <div th:insert="~{fragments/common :: footer}"></div>
     </div>
 </div>
 </body>
