--- a/src/main/resources/templates/fragments/user.html
+++ b/src/main/resources/templates/fragments/user.html
@@ -4,69 +4,65 @@
 <body>
 
 
-<div th:fragment="userpanel-index">
-
-    <div class="user-menu">
-        <a id="menu-rending" onclick="userMenuNavigation(this.id)"
-           class="btn menu-btn btn-info center-align">
-            <span th:text="#{message.index-page.your-requests}">Pending</span>
-            <span th:unless="${unprocessedCount==0}"
-                  th:text="'('+${unprocessedCount}+')'">1</span>
-        </a>
-        <a id="menu-approved" onclick="userMenuNavigation(this.id)"
-           class="btn menu-btn btn-info center-align"> <span th:text="#{message.index-page.processed-requests}">Processed</span>
-            <span th:unless="${processedCount==0}"
-                  th:text="'('+${processedCount}+')'">1
+<div th:fragment="userpanel-index" class="user-menu">
+    <a id="menu-rending" onclick="userMenuNavigation(this.id)"
+       class="btn menu-btn btn-info center-align">
+        <span th:text="#{message.index-page.your-requests}">Pending</span>
+        <span th:unless="${unprocessedCount==0}"
+              th:text="'('+${unprocessedCount}+')'">1</span>
+    </a>
+    <a id="menu-approved" onclick="userMenuNavigation(this.id)"
+       class="btn menu-btn btn-info center-align"> <span
+            th:text="#{message.index-page.processed-requests}">Processed</span>
+        <span th:unless="${processedCount==0}"
+              th:text="'('+${processedCount}+')'">1
                     </span>
-        </a>
-        <a id="menu-denied" onclick="userMenuNavigation(this.id)"
-           class="btn menu-btn btn-info center-align">
-            <span th:text="#{message.admin-page.denied}">Denied</span>
-            <span th:unless="${deniedCount==0}"
-                  th:text="'('+${deniedCount}+')'">1</span>
-        </a>
-        <a id="menu-rooms" th:href="@{/rooms}"
-           class="btn menu-btn btn-info center-align"
-           th:text="#{message.hotel.rooms}">Rooms</a>
-        <a id="menu-newrequest" th:href="@{/request/new}"
-           class="btn menu-btn btn-info center-align"
-           th:text="#{message.hotel.new-request}">New request</a>
-    </div>
+    </a>
+    <a id="menu-denied" onclick="userMenuNavigation(this.id)"
+       class="btn menu-btn btn-info center-align">
+        <span th:text="#{message.admin-page.denied}">Denied</span>
+        <span th:unless="${deniedCount==0}"
+              th:text="'('+${deniedCount}+')'">1</span>
+    </a>
+    <a id="menu-rooms" th:href="@{/rooms}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.rooms}">Rooms</a>
+    <a id="menu-newrequest" th:href="@{/request/new}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.new-request}">New request</a>
 </div>
 
-<div th:fragment="userpanel-links">
 
-    <div class="user-menu">
-        <a id="menu-rending" onclick="userMenuNavigation(this.id)" th:href="@{/index}"
-           class="btn menu-btn btn-info center-align">
-            <span th:text="#{message.index-page.your-requests}">Pending</span>
-            <span th:unless="${unprocessedCount==0}"
-                  th:text="'('+${unprocessedCount}+')'">1</span>
-        </a>
-        <a id="menu-approved" onclick="userMenuNavigation(this.id)" th:href="@{/index(pr_page=1)}"
-           class="btn menu-btn btn-info center-align"> <span th:text="#{message.index-page.processed-requests}">Processed</span>
-            <span th:unless="${processedCount==0}"
-                  th:text="'('+${processedCount}+')'">1
+<div th:fragment="userpanel-links" class="user-menu">
+    <a id="menu-rending" onclick="userMenuNavigation(this.id)" th:href="@{/index}"
+       class="btn menu-btn btn-info center-align">
+        <span th:text="#{message.index-page.your-requests}">Pending</span>
+        <span th:unless="${unprocessedCount==0}"
+              th:text="'('+${unprocessedCount}+')'">1</span>
+    </a>
+    <a id="menu-approved" onclick="userMenuNavigation(this.id)" th:href="@{/index(pr_page=1)}"
+       class="btn menu-btn btn-info center-align"> <span
+            th:text="#{message.index-page.processed-requests}">Processed</span>
+        <span th:unless="${processedCount==0}"
+              th:text="'('+${processedCount}+')'">1
                     </span>
-        </a>
-        <a id="menu-denied" onclick="userMenuNavigation(this.id)" th:href="@{/index(dr_page=1)}"
-           class="btn menu-btn btn-info center-align">
-            <span th:text="#{message.admin-page.denied}">Denied</span>
-            <span th:unless="${deniedCount==0}"
-                  th:text="'('+${deniedCount}+')'">1</span>
-        </a>
-        <a id="menu-rooms" th:href="@{/rooms}"
-           class="btn menu-btn btn-info center-align"
-           th:text="#{message.hotel.rooms}">Rooms</a>
-        <a id="menu-newrequest" th:href="@{/request/new}"
-           class="btn menu-btn btn-info center-align"
-           th:text="#{message.hotel.new-request}">New request</a>
-    </div>
+    </a>
+    <a id="menu-denied" onclick="userMenuNavigation(this.id)" th:href="@{/index(dr_page=1)}"
+       class="btn menu-btn btn-info center-align">
+        <span th:text="#{message.admin-page.denied}">Denied</span>
+        <span th:unless="${deniedCount==0}"
+              th:text="'('+${deniedCount}+')'">1</span>
+    </a>
+    <a id="menu-rooms" th:href="@{/rooms}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.rooms}">Rooms</a>
+    <a id="menu-newrequest" th:href="@{/request/new}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.new-request}">New request</a>
 </div>
 
 
 <div th:fragment="usertables">
-
     <div hidden id="unprocessed-requests" class="index-table">
         <p class="white"
            th:if="${processedRequests.hasContent() && unprocessedRequests.hasContent()==false}"
@@ -214,8 +210,9 @@
                     <th scope="col" th:text="#{message.hotel.class}">Class</th>
                     <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
                     <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
-                    <th scope="col" th:text="#{message.hotel.status}">Status</th>
-                    <th scope="col" th:text="#{message.cancel}">Cancel</th>
+
+                    <th scope="col" th:text="#{message.hotel.reason}">Status</th>
+                    <th scope="col" th:text="#{message.delete}">Delete</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -226,12 +223,8 @@
                         <td th:text="#{'message.class.'+${request.classID}}"></td>
                         <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
                         <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
-                        <td>
-                            <a th:text="#{message.view}"
-                               th:href="@{'/request/view/'+${request.id}}"
-                               class="btn btn-info float-center">view</a>
-                        </td>
-                        <td th:text="#{message.status.DENIED}"></td>
+
+                        <td th:text="${request.deniedRequest.reason}"></td>
                         <td>
                             <a th:href="@{'/request/delete/'+${request.id}}"
                                th:text="#{message.delete}"
