--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
                 <div th:insert="~{fragments/user :: usertables}"></div>
             </div>
-            <div th:insert="~{fragments/common :: footer}"></div>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
     </div>
 </div>
