--- a/src/main/resources/templates/rooms-list.html
+++ b/src/main/resources/templates/rooms-list.html
@@ -18,16 +18,14 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-            <div>
-                <h3 class="text-center" th:text="#{message.roomslist-page.header.title}"></h3>
-            </div>
+            <div th:insert="~{fragments/common :: header}"></div>
+            <div th:insert="~{fragments/user :: userpanel-links}"></div>
             <div class="card-body">
                 <p class="white" th:if="${roomsList.isEmpty()==true}" th:text="#{message.roomslist-page.norooms}">There
                     are no rooms for booking in hotel now</p>
                 <table th:if="${roomsList.isEmpty()==false}" class="table table-bordered white">
                     <thead>
                     <tr>
-                        <th scope="col">#</th>
                         <th scope="col" th:text="#{message.roomslist-page.roomnumber}">Room Number</th>
                         <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
                         <th scope="col" th:text="#{message.hotel.class}">Class</th>
@@ -43,19 +41,18 @@
                     <tbody>
                     <th:block th:each="room : ${roomsList}">
                         <tr>
-                            <th th:text="${room.id}" scope="row">1</th>
                             <td th:text="${room.number}"></td>
                             <td th:text="#{'message.capacity.'+${room.capacity}}"></td>
                             <td th:text="#{'message.class.'+${room.classID}}"></td>
                             <td th:text="${room.price}"></td>
                             <td sec:authorize="hasRole('ROLE_ADMIN')">
                                 <a
-                                   th:href="@{'/rooms/edit/'+${room.id}}" class="btn btn-dark float-left"
-                                   th:text="#{message.roomseditor-page.edit}">Edit</a>
+                                        th:href="@{'/rooms/edit/'+${room.id}}" class="btn btn-dark float-center"
+                                        th:text="#{message.roomseditor-page.edit}">Edit</a>
                             </td>
                             <td sec:authorize="hasRole('ROLE_ADMIN')">
                                 <a sec:authorize="hasRole('ROLE_ADMIN')"
-                                   th:href="@{'/rooms/delete/'+${room.id}}" class="btn btn-dark float-left"
+                                   th:href="@{'/rooms/delete/'+${room.id}}" class="btn btn-dark float-center"
                                    th:text="#{message.roomseditor-page.delete}">Delete</a>
                             </td>
                         </tr>
@@ -87,34 +84,10 @@
                         </li>
                     </ul>
                 </nav>
-                <a sec:authorize="hasRole('ADMIN')"
-                   th:href="@{'/rooms/new'}" class="btn btn-dark float-right"
-                   th:text="#{message.roomseditor-page.newroom}">New room</a>
-                <div>
-                </div>
-                <a th:href="@{'/index/'}" class="btn btn-dark float-left"
-                   th:text="#{message.roomslist-page.button.home}">Back
-                    to home page</a>
             </div>
-            <div class="card-footer">
-                <div class="text-center">
-                    <span th:text="#{message.change-language}+': '"></span>
-                    <a th:href="@{'/language?lang=en'}">
-                        <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
-                    </a> <span> /</span>
-                    <a th:href="@{'/language?lang=ru'}">
-                        <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                    </a>
-                </div>
-            </div>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
     </div>
 </div>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script th:src="@{/resources/js/hotel.js}"></script>
 </body>
 </html>
