--- a/src/main/resources/templates/suitable-rooms.html
+++ b/src/main/resources/templates/suitable-rooms.html
@@ -18,10 +18,27 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-            <div class="card-header">
-                <h3 id="index-header" class="text-center" th:text="#{message.fittingrooms-page.header}">Possible
-                    rooms</span></h3>
+
+            <div id="header" class="card-header card-header-flex">
+                <h3 id="index-header" class="text-center"
+                    th:text="#{message.fittingrooms-page.header}">Possible rooms</h3>
+                <div class="card-header-flex">
+                    <div class="language">
+                        <span th:text="#{message.change-language}+': '"></span>
+                        <a th:href="@{'/language?lang=en'}">
+                            <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
+                        </a> <span> /</span>
+                        <a th:href="@{'/language?lang=ru'}">
+                            <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
+                        </a>
+                    </div>
+                    <form name="logoutForm" th:action="@{/logout}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                        <input type="submit" class="btn header-button btn-dark" th:value="#{message.signout}"/>
+                    </form>
+                </div>
             </div>
+
             <div class="card-body">
                 <p class="white" th:if="${roomsList.isEmpty()}"
                    th:text="#{message.fittingrooms-page.nofitting}">There are no fitting rooms</p>
@@ -66,11 +83,6 @@
                        th:text="#{message.index-page.admin}"
                        class="btn btn-info">Admin
                         menu</a>
-                </div>
-                <div class="text-center">
-                    <span th:text="#{message.change-language}+': '"></span>
-                    <a th:href="@{'/language?lang=en'}" th:text="#{message.locale.en}"></a><span> /</span>
-                    <a th:href="@{'/language?lang=ru'}" th:text="#{message.locale.ru}"></a>
                 </div>
             </div>
         </div>
