Fixed missing header for denied requests table at index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -218,6 +218,7 @@
                                 <th scope="col" th:text="#{message.hotel.class}">Class</th>
                                 <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
                                 <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
+                                <th scope="col" th:text="#{message.view}">View</th>
                                 <th scope="col" th:text="#{message.hotel.status}">Status</th>
                                 <th scope="col" th:text="#{message.cancel}">Cancel</th>
                             </tr>
