script for rooms price

--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -3,5 +3,13 @@
       xmlns:th="http://www.thymeleaf.org">
 <body>
 
+<div th:fragment="adminpanel-tables" class="user-menu">
+    <!--To Do -->
+</div>
+
+<div th:fragment="adminpanel-links" class="user-menu">
+    <!--To Do -->
+</div>
+
 </body>
 </html>
