--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -37,6 +37,10 @@
     <script th:src="@{/js/hotel.js}"></script>
     <script> $(document).ready(function () {
         indexUrls();
+        if(document.getElementById("price").value === ''){
+            $('#price').val(getPrice());
+        }
+
     });</script>
 </div>
 
