--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,6 +33,20 @@ html, body {
     border: 1px solid #dee2e694 !important;
 }
 
+#dollar{
+    position: absolute;
+    color: #495057;
+    padding-top: 6px;
+    padding-left: 62px;
+    z-index: 4;
+}
+.price-input{
+    padding-left: 25px;
+}
+
+.price-div{
+    padding-bottom: 20px;
+}
 
 .paid {
     color: #00ff6a;
