--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -65,7 +65,7 @@
                             <span class="input-group-text"><i class="fa fa-credit-card"></i> </span>
                         </div>
                         <span id="dollar">$</span>
-                        <input th:field="*{price}" name="price" type="number" step="0.01" class="form-control price-input">
+                        <input th:field="*{price}" name="price" type="text" class="form-control price-input">
                     </div>
                     <input hidden class="form-control" type="text" th:field="*{id}">
 
